
  Overview of changes in CVS Etherape 0.1.7 (Tuesday 02-28-2000):
  
     * Pcap filtering added. Now you can use tcpdump style filtering
       (enclosed in quotes) with the -f option.
     * Added libm to autoconf.in for systems with a separate math lib.
     * First try at debian packaging.
       
  Overview of changes in Etherape 0.1.6 (Monday 02-28-2000):
  
     * Refresh period spin, averaging time spin, and link width sliders
       now work. Time to get better than Quake framerates! :-)
     * Node, link and text colors can be set from the command line.
     * The rest of the GUI is active, so that it can answer itself
       people's favorite question. :-) (Well, Control-Q does actually
       work!)
     * Automated release process so that I can keep bombarding you with
       releases.
       
  Overview of changes in Etherape 0.1.5 (Sunday 02-27-2000):
  
     * More for readability: Click on a node and a pop-up window appears
       with all node data.
     * You can change the network interface to listen to in the command
       line.
     * Fixed a bug in the dotted quad ip number display
     * Compiles without warnings
     * Updated README
       
  Overview of changes in Etherape 0.1.4 (Sunday 02-27-2000):
  
     * Now parses command line arguments:
       etherape options
       -n, --numeric don't convert addresses to names
       -r, --with-dns-resolving use IP name resolving. Caution! Long
       timeouts!
       -d, --diagram-only don't display any node text identification
     * The resolver is turned off by default since it can potentially
       freeze your display for too long
     * digram-only makes for a clearer display. It's intended to be
       practical whenenver I have per-node pop-up windows ready.
       
  Overview of changes in Etherape 0.1.3 (Saturday 02-26-2000):
  
     * Links with no traffic disappear with time. Makes diagram more
       readable.
     * IP host name displayed if no ether name available